turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:15: error: ')' expected but 'val' found.
val nbSteps:Int = 8342; // Change this
^Turmite:45: error: ';' expected but 'def' found.
def init() {
^